made golangci-lint, started repo UNIT tests, made makefile, updated README
